feat: add email auth for walletless node users
